# RustFileFinder

./: .gitignore  Cargo.toml  README.md  rustfilefinder.toml
samples/: appunti.txt  esempio.md
src/: main.rs
