[package]
name = "rustfilefinder"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
pdf-extract = "0.7"
gag = "1.0"
once_cell = "1.19"
toml = "0.8"
dirs = "5.0"



